# AcadGIS

./: .gitignore  CHANGELOG.md  MANIFEST.in  NOTICE  README.md  README_PyPI.md  ROADMAP.md  Thesis_Aanalysis.ipynb  Thesis_Data.ipynb  pyproject.toml
acadgis/: __init__.py  connectors.py  core.py  data.py  decorations.py  drainage.py  hydro.py  inset.py  layers.py  layouts.py  matching.py  palettes.py  terrain.py  thematic.py  themes.py  world.py  zoominset.py
acadgis/data/samples/: bangladesh_adm0.geojson  bangladesh_adm1.geojson  bangladesh_adm2.geojson  india_adm0.geojson  india_adm1.geojson  india_adm2.geojson  iraq_adm0.geojson  iraq_adm1.geojson  lakes_50m.geojson  rivers_50m.geojson  usa_adm1.geojson  world_adm0.geojson
brand/: README.md
brand/web/: site.webmanifest
examples/: gallery.py  usa_demo.py
tests/: test_acadgis.py  test_layers.py  test_links.py  test_thematic.py
