[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acadgis"
version = "0.1.4"
description = "Publication-ready academic GIS study-area maps in a few lines of Python."
readme = "README_PyPI.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
    { name = "Ripon Chandra Malo" , email = "riponce.buet@gmail.com" },
]
keywords = [
    "gis", "geospatial", "cartography", "mapping", "map",
    "study-area-map", "research-map", "choropleth", "choropleth-map",
    "locator-map", "thesis-map", "publication", "geopandas", "matplotlib",
    "administrative-boundaries", "gadm", "openstreetmap", "terrain",
    "hillshade", "dem", "rivers", "spatial-analysis", "qgis-alternative",
    "academic", "research",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "geopandas>=0.12",
    "matplotlib>=3.6",
    "numpy>=1.22",
    "pandas>=1.5",
    "shapely>=2.0",
]

[project.optional-dependencies]
# Live boundary download + fuzzy name matching + classification schemes.
full = ["pygadm>=0.5", "rapidfuzz>=3.0", "mapclassify>=2.5",
        "rasterio>=1.3", "rioxarray>=0.13", "pysheds>=0.3",
        "contextily>=1.3", "xyzservices>=2023.0"]
download = ["pygadm>=0.5"]
match = ["rapidfuzz>=3.0"]
terrain = ["rasterio>=1.3", "rioxarray>=0.13"]   # DEM + hillshade + add_raster/add_topography
raster = ["rasterio>=1.3", "rioxarray>=0.13"]    # alias: generic raster layers
basemap = ["contextily>=1.3", "xyzservices>=2023.0"]   # XYZ tile basemaps
drainage = ["pysheds>=0.3", "rasterio>=1.3"]      # streams from DEM
dev = ["pytest>=7.0", "pygadm>=0.5", "rapidfuzz>=3.0", "mapclassify>=2.5",
       "rasterio>=1.3", "rioxarray>=0.13", "pysheds>=0.3",
       "contextily>=1.3", "xyzservices>=2023.0",
       "jupyter", "nbconvert"]

[project.urls]
Homepage = "https://acadgis.com"
Repository = "https://github.com/riponcm/AcadGIS"
Issues = "https://github.com/riponcm/AcadGIS/issues"

[tool.setuptools.packages.find]
include = ["acadgis*"]

[tool.setuptools.package-data]
acadgis = ["data/samples/*.geojson"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::UserWarning"]
